compiler/toc_hir_lowering/tests/snapshots/lowering__lower_array_types-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : array char, boolean of int"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..35): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..35): []
        StmtItem@(FileId(1), 0..35): ItemId(0)
          Type@(FileId(1), 0..35): "_"@(FileId(1), 5..6)
            Array@(FileId(1), 9..35): Static
              Primitive@(FileId(1), 15..19): Char
              Primitive@(FileId(1), 21..28): Boolean
              Primitive@(FileId(1), 32..35): Int

