compiler/toc_hir_lowering/tests/snapshots/lowering__lower_array_types_any_sized-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : proc uwu(_ : array 1 .. *, char of int)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..48): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..48): []
        StmtItem@(FileId(1), 0..48): ItemId(0)
          Type@(FileId(1), 0..48): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..48): [...]
              Array@(FileId(1), 22..47): Static
                Constrained@(FileId(1), 28..34): end => Any
                  ExprBody@(FileId(1), 28..29)
                    Literal@(FileId(1), 28..29): Integer(1)
                Primitive@(FileId(1), 44..47): Int
              Void@(FileId(1), 9..48)
error in file FileId(1) at 28..34: extra ranges specified
| error in file FileId(1) for 36..40: extra ranges after
| note in file FileId(1) for 28..34: this must be the only range present
| info: any-sized arrays must have this range be the only range present

