compiler/toc_hir_lowering/tests/snapshots/lowering__lower_array_types_any_sized-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : proc uwu(_ : array 1 .. *, char,,char of int)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..54): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..54): []
        StmtItem@(FileId(1), 0..54): ItemId(0)
          Type@(FileId(1), 0..54): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..54): [...]
              Array@(FileId(1), 22..53): Static
                Constrained@(FileId(1), 28..34): end => Any
                  ExprBody@(FileId(1), 28..29)
                    Literal@(FileId(1), 28..29): Integer(1)
                Primitive@(FileId(1), 50..53): Int
              Void@(FileId(1), 9..54)
error in file FileId(1) at 28..34: extra ranges specified
| error in file FileId(1) for 36..46: extra ranges after
| note in file FileId(1) for 28..34: this must be the only range present
| info: any-sized arrays must have this range be the only range present
error in file FileId(1) at 41..42: unexpected token
| error in file FileId(1) for 41..42: expected type specifier, but found `,`

