compiler/toc_hir_lowering/tests/snapshots/lowering__lower_array_types_init_sized-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ : array 1 .. *, char,,char of int := init(1)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..50): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..50): []
        StmtItem@(FileId(1), 0..50): ItemId(0)
          ConstVar@(FileId(1), 0..50): var "_"@(FileId(1), 4..5)
            Array@(FileId(1), 8..39): MaybeDyn
              Constrained@(FileId(1), 14..20): end => Unsized(Some(1))
                ExprBody@(FileId(1), 14..15)
                  Literal@(FileId(1), 14..15): Integer(1)
              Primitive@(FileId(1), 36..39): Int
            ExprBody@(FileId(1), 43..50)
error in file FileId(1) at 14..20: extra ranges specified
| error in file FileId(1) for 22..32: extra ranges after
| note in file FileId(1) for 14..20: this must be the only range present
| info: `init`-sized arrays must have this range be the only range present
error in file FileId(1) at 27..28: unexpected token
| error in file FileId(1) for 27..28: expected type specifier, but found `,`
error in file FileId(1) at 43..50: unsupported expression
| error in file FileId(1) for 43..50: this expression is not supported yet

